# adomator

./: .gitignore  LICENSE  README.md  pyproject.toml
adomator/: __init__.py  cli.py  client.py  config.py  models.py  reconciler.py
examples/: my-project.yaml
tests/: test_config.py  test_models.py  test_reconciler.py
